--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,123 +1,305 @@
-body{
-    background-color: white;
-    padding:20px;
-}
-div{
-    float:left;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-bottom: 40px;
-    padding-top: 0px;
-}
-div img{
-    float:left;
-}
-h1{
-    font-family: 'Pacifico', cursive;
-    font-size: 80px;
-    
-}
-.div1 {
-    float:right;
-    padding:10px;
-    clear:both;
-    
-} 
-div p{
-    font-size: 20px;
-    color: rgb(119, 115, 115);
-    padding-left:0px ;
-}
-
-nav{
-    float:right;
-}
-.lastimg {
- margin-left: 10px;
-}
-main{
-    clear:both;
-}
-h2{
-    font-size: 60px;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    margin-bottom: 5px;
-    text-align: left;
-    padding-left: 10%;
-    padding-right: 10%;
-}
-#hp {
- font-size: 20px;
- color: rgb(119, 115, 115);
- margin-bottom: 2px;
- text-align: left;
-}
-.line{
-    background-color:  rgb(119, 115, 115);
-    padding:2px;
-}
-.par1{
-    font-size: 20px;
-    color: rgb(119, 115, 115);
-    
-}
-#sec1{
-    padding-bottom: 30px;
-}
-#sec1 p {
-    font-size: 20px;
-    padding-left: 10%;
-    padding-right: 10%;
-
-}
-#sec1 img{
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-bottom: 30px;
-}
-#sec2 {
-    background-image:url('/Images/list-bg.png');
-    background-position : center; 
-    height:200px; 
-    padding-right: 10%;
-    padding-bottom: 30px;
+body {
+    width: 70%;
+    margin: 0 auto;
     text-align: center;
+    font-family: 'PT Serif', serif;
+  }
+  
+.navBar {
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 1rem;
 }
-#form1{
+  
+.logo-img {
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;
     float: left;
-}
-#form2{
-    float: right;
-}
-input[type=checkbox]:checked + label{
+    text-decoration: none;
+    display: flex;
+    align-items: flex-start;
     color: black;
+  }
+  
+  .logo{
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    background-color: rgb(52, 52, 52);
+    vertical-align: top;
+  }
+  
+  .logo-img>h2 {
+    font-family: "Brush Script MT", cursive;
+    flex: 1;
+    padding-left: 0.7rem;
+    text-align: left;
+    font-size: 2.3rem;
+    font-weight: bold;
+  }
+  
+  
+  .logoText {
+    font-size: 0.9rem;
+    position: relative;
+    display: block;
+    font-weight: 200;
+    font-family: 'PT Serif', serif;
+    text-transform: uppercase;
+  }
+  
+  .float-fix {
+    clear: both;
+  }
+  
+  .socialLogo {
+    position: relative;
+    display: block;
+    float: right;
+    margin-top: 1rem;
+  }
+  
+  .socialLogo li {
+    display: inline;
+  }
+  
+  .socialLogo li a {
+    text-decoration: none;
+  }
+  
+  .line {
+    background-image: repeating-linear-gradient(45deg, rgb(255, 255, 255) 0%, rgb(0, 0, 0) 10%);
+    background-size: 20px 20px;
+    width: 100%;
+    height: 20px;
+    margin: 2rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  
+  .sec2 {
+    font-size: 3rem;
+    font-weight: bold;
+    text-transform: capitalize;
+    text-align: left;
+  }
+  
+  .sec2 h2 {
+    display: inline;
+    float: left;
+    font-weight: 900;
+    font-family: 'Oswald', sans-serif;
+  }
+  
+  .sec2 span {
+    display: block;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    font-weight: 200;
+    color: rgb(151, 118, 110);
+    margin-top: 0.3rem;
+  }
+  
+  .print-button {
+    border: 0;
+    cursor: pointer;
+  }
+  
+  .print-button:focus {
+    outline: none;
+  }
+  
+  .print-button {
+    margin-top: 2rem;
+    float: right;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    font-weight: 200;
+    background-color: transparent;
+  }
+  
+  .print-img {
+    width: 12px;
+    height: 12px;
+  }
+  
+  .choco-pizza {
+    width: 100%;
+    margin: 2rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  
+  article p {
+    text-transform: capitalize;
+    color: rgb(151, 118, 110);
+    text-align: left;
+    padding-bottom: 1.5rem;
+    text-indent: 50px;
+    font-size: 1.05rem;
+    line-height: 25px;
+  }
+  
+  .sec2 {
+    font-family: 'Pangolin', cursive;
+    height: 175px;
+    position: relative;
+    margin: 20px auto;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: rgb(254, 251, 234);
+    box-shadow: 0px 0px 5px 0px #888;
+  }
+  
+  .sec2::before {
+    content: '';
+    width: 2px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 40px;
+    background-color: rgba(255, 0, 0, 0.6);
+  }
+  
+  .pattern {
+    height: 100%;
+    background-image: repeating-linear-gradient(rgb(254, 251, 234) 0px, rgb(254, 251, 234) 24px, teal 25px);
+  }
+  
+  .list {
+    padding-top: 6px;
+    padding-left: 56px;
+    padding-right: 16px;
+    line-height: 25px;
+    font-size: 1.2rem;
+    text-align: left;
+    color: rgb(121, 104, 79);
+  }
+  
+  .listleft {
+    float: left;
+    width: 50%;
+  }
+  
+  .listright {
+    width: 50%;
+    float: right;
+  }
+  
+  .listleft li:before,
+  .listright li:before {
+    content: "\2610";
+    margin-right: 5px;
+  }
+  
+  .del {
     text-decoration: line-through;
-}
-label{
-    font-family:'Patric Hand', monospace;
-}
-#sec3{
-    clear:both;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-bottom: 30px;
-}
-#sec3 img{
-    float:left;
-}
-#sec3 p {
-text-align: left;
-}
-#share {
-    background-color: rgb(122, 11, 11);
-    float:right;
-    padding: a25px;
-    margin-top: 20px;
-}
-footer{
-    clear:both;
+  }
+  
+  .checked:before {
+    content: "\2611" !important;
+    text-decoration: none !important;
+    margin-right: 5px;
+  }
+  
+  .sec3 {
+    margin: 0 auto;
     text-align: center;
-
-}
-
+    padding-top: 1rem;
+  }
+  
+  .vanSec {
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    float: left;
+    text-align: left;
+    width: 70%;
+    display: flex;
+    align-items: flex-start;
+  }
+  
+  .vanImg {
+    user-select: none;
+    width: 50px;
+    border-radius: 50%;
+  }
+  
+  .vanInf {
+    flex: 1;
+    padding-left: 1rem;
+  }
+  
+  .vanName {
+    margin-top: 0;
+    font-size: 1.3rem;
+  }
+  
+  .vanHob {
+    display: block;
+    margin-top: 0;
+    margin-bottom: 1rem;
+  }
+  
+  
+  .share {
+    float: right;
+    width: 10rem;
+    margin-top: 0.5rem;
+    background-color: rgb(188, 112, 88);
+    color: white;
+    text-transform: uppercase;
+    height: 3rem;
+    font-weight: 200;
+  }
+  
+  footer {
+    margin: 1rem;
+  }
+  
+  .footerImg{
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    background-color: rgb(153, 153, 153);
+    vertical-align: top;
+    margin: 1rem;
+  }
+  
+  
+  .last {
+    overflow: hidden;
+    text-align: center;
+  }
+  
+  .last:before,
+  .last-out:after {
+    background-color: #333;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: relative;
+    vertical-align: middle;
+    width: 50%;
+    margin-top: 2.2rem;
+  }
+  
+  .last:before {
+    right: 0.5em;
+    margin-left: -50%;
+  }
+  
+  .last:after {
+    left: 0.5em;
+    margin-right: -50%;
+  }
+  
+  footer p {
+    font-weight: 100;
+    font-size: 0.8rem;
+    line-height: 20px;
+  }
