--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,14 +8,14 @@ body {
 .navBar {
     margin: 0 auto;
     text-align: center;
-    padding-top: 1rem;
+    padding-top: 10px;
 }
   
 .logo-img {
-    padding-top: .3125rem;
-    padding-bottom: .3125rem;
-    margin-right: 1rem;
-    font-size: 1.25rem;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin-right: 10px;
+    font-size: 13px;
     line-height: inherit;
     white-space: nowrap;
     float: left;
@@ -34,22 +34,21 @@ body {
   }
   
   .logo-img>h2 {
-    font-family: "Brush Script MT", cursive;
+    font-family: 'Kaushan Script', cursive;
     flex: 1;
-    padding-left: 0.7rem;
+    padding-left: 7px;
     text-align: left;
-    font-size: 2.3rem;
+    font-size: 25px;
     font-weight: bold;
   }
   
   
   .logoText {
-    font-size: 0.9rem;
+    font-size: 10px;
     position: relative;
     display: block;
-    font-weight: 200;
     font-family: 'PT Serif', serif;
-    text-transform: uppercase;
+    color:rgb(139, 138, 138);
   }
   
   .float-fix {
@@ -60,7 +59,7 @@ body {
     position: relative;
     display: block;
     float: right;
-    margin-top: 1rem;
+    margin-top: 10px;
   }
   
   .socialLogo li {
@@ -70,38 +69,44 @@ body {
   .socialLogo li a {
     text-decoration: none;
   }
+  .lastimg{
+    padding-left: 10px;
+  }
   
   .line {
     background-image: repeating-linear-gradient(45deg, rgb(255, 255, 255) 0%, rgb(0, 0, 0) 10%);
     background-size: 20px 20px;
     width: 100%;
     height: 20px;
-    margin: 2rem;
+    margin: 80px;
     margin-left: 0;
     margin-right: 0;
   }
   
   .sec2 {
-    font-size: 3rem;
+    font-size: 30px;
     font-weight: bold;
     text-transform: capitalize;
     text-align: left;
   }
   
-  .sec2 h2 {
+  .sec1 h2 {
     display: inline;
     float: left;
-    font-weight: 900;
-    font-family: 'Oswald', sans-serif;
+    font-size: 40px;
+    font-family: 'New Tegomin', serif;
+    font-weight: bold;
   }
   
-  .sec2 span {
+  .sec1 span {
     display: block;
     font-size: 0.9rem;
     text-transform: uppercase;
     font-weight: 200;
-    color: rgb(151, 118, 110);
+    color:rgb(139, 138, 138);
     margin-top: 0.3rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding-bottom: 20px;
   }
   
   .print-button {
@@ -129,7 +134,7 @@ body {
   
   .choco-pizza {
     width: 100%;
-    margin: 2rem;
+    margin: 20px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -196,8 +201,9 @@ body {
     margin-right: 5px;
   }
   
-  .del {
+  .check {
     text-decoration: line-through;
+    
   }
   
   .checked:before {
@@ -209,13 +215,13 @@ body {
   .sec3 {
     margin: 0 auto;
     text-align: center;
-    padding-top: 1rem;
+    padding-top: 10px;
   }
   
   .vanSec {
-    padding-top: .3125rem;
-    padding-bottom: .3125rem;
-    margin-right: 1rem;
+    padding-top:3px;
+    padding-bottom: 3px;
+    margin-right: 10px;
     float: left;
     text-align: left;
     width: 70%;
@@ -231,75 +237,44 @@ body {
   
   .vanInf {
     flex: 1;
-    padding-left: 1rem;
+    padding-left: 10px;
   }
   
   .vanName {
     margin-top: 0;
-    font-size: 1.3rem;
+    font-size: 30px;
+    font-size: 30px;
   }
   
   .vanHob {
     display: block;
     margin-top: 0;
-    margin-bottom: 1rem;
+    font-size: 20px;
+    margin-bottom: 70px;
+
   }
   
   
   .share {
     float: right;
-    width: 10rem;
-    margin-top: 0.5rem;
+    width: 100px;
+    margin-top: 0.5px;
     background-color: rgb(188, 112, 88);
     color: white;
-    text-transform: uppercase;
-    height: 3rem;
     font-weight: 200;
   }
-  
-  footer {
-    margin: 1rem;
+  footer{
+    clear: both;
+    display: block;
+   margin-top: 80px 70px 10px 70px;
   }
-  
-  .footerImg{
-    width: 30px;
-    height: 30px;
-    padding: 5px;
-    background-color: rgb(153, 153, 153);
-    vertical-align: top;
-    margin: 1rem;
-  }
-  
-  
-  .last {
-    overflow: hidden;
-    text-align: center;
-  }
-  
-  .last:before,
-  .last-out:after {
-    background-color: #333;
-    content: "";
-    display: inline-block;
-    height: 1px;
-    position: relative;
-    vertical-align: middle;
-    width: 50%;
-    margin-top: 2.2rem;
-  }
-  
-  .last:before {
-    right: 0.5em;
-    margin-left: -50%;
-  }
-  
-  .last:after {
-    left: 0.5em;
-    margin-right: -50%;
-  }
-  
+
+ 
   footer p {
     font-weight: 100;
-    font-size: 0.8rem;
+    font-size:15px;
     line-height: 20px;
-  }
+    font-family:Arial, Helvetica, sans-serif;
+    margin-top: 0;
+    color: rgb(139, 138, 138);;
+  } 
